Ajout de la propriété text-align: center au sélecteur header.fixed

--- a/style.css
+++ b/style.css
@@ -1894,6 +1894,7 @@ header.fixed {
     padding: 10px;
     transition: background-color 0.3s, color 0.3s; 
     padding-bottom: -20px;
+    text-align: center;
 }
 
 .sidebars li:hover {
